<resources>
    <string name="app_name">CourseLearn</string>

    <string name="logo_text">SEECODER</string>

    <string name="text_search_tips">搜索课程</string>
    <string name="cancel_authorization">Cancel Authorization</string>
    <string name="text_home">首页</string>
    <string name="text_study">课程学习</string>
    <string name="text_star">我的收藏</string>
    <string name="text_account">我的</string>

    <string name="text_announcement">公告</string>
    <string name="text_lecture">课件</string>
    <string name="text_examination">测验</string>
    <string name="text_query">疑问</string>
    <string name="text_comment">评价</string>

    <string name="account_login_hint">登录华为账号</string>
    <string name="account_courses_text">我的课程</string>
    <string name="account_orders_text">消费记录</string>
    <string name="logout_text">退出账号</string>
    <string name="course_intro_text">课程介绍</string>
    <string name="course_ware_text">课件</string>

    <string name="course_name_example">软件工算 I</string>
    <string name="course_provider_example">南京大学</string>
    <string name="course_intro_example">本课程内容涉及以下知识：Python编程，Java编程，Lambda演算，Java虚拟机，面向对象编程..</string>
    <string name="course_buy_button_example">购买课程 28</string>
    <string name="course_show_button_example">浏览课程</string>

    <string name="comment_item_title_example">用户A：</string>
    <string name="comment_item_content_example">这个课程太好了！五星好评！</string>
    <string name="comment_item_rating_example">5</string>
    <string name="comment_tips">是好是坏，评价一下吧～</string>

    <string name="query_item_title_example">用户A：</string>
    <string name="query_item_content_example">请问1+1=？</string>
    <string name="query_item_reply_title_example">B老师的回答：</string>
    <string name="query_item_reply_example">1+1=2</string>
    <string name="query_tips">不会的问题快来问问老师吧～</string>
    <string name="query_item_answer_button_example">添加您的回答</string>
    <string name="add_test_tips">请输入测试名称</string>

    <string name="course_star_button">收藏课程</string>

    <string name="course_order">课程订单</string>
    <string name="recharge_text">钻石充值</string>
    <string name="user_name_text">用户昵称</string>
    <string name="user_balance_text_title">余额：</string>
    <string name="user_balance_text">0</string>
    <string name="course_ware_name_example">Python-07-Lambda and Functional Programming</string>
    <string name="login_warn_text">你还没有登录！</string>
    <string name="none_bought_text">你还没有购买过任何课程</string>
    <string name="account_courses_refresh_button">刷新列表</string>
    <string name="course_name_for_test_1">软件工程与计算 I</string>
    <string name="course_name_for_test_2">基于Java的面向对象编程范式</string>
    <string name="profile_institution">软件学院</string>
    <string name="profile_university">南京大学</string>
    <string name="profile_introduction">学如逆水行舟，不进则退</string>
    <string name="myBalanceText">余额</string>
    <string name="MyLevel">等级</string>
    <string name="_10">10</string>
    <string name="myStar">我的收藏</string>
</resources>