<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    app:cardBackgroundColor="@color/white"
    app:cardElevation="4dp"
    app:contentPadding="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/query_item_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/query_item_title_example"
                android:textSize="14sp" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/query_item_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="40dp"
                android:text="@string/query_item_content_example"
                android:textColor="@color/black"
                android:textSize="18sp" />
        </RelativeLayout>

        <TextView
            android:id="@+id/query_item_reply_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/query_item_reply_title_example"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/query_item_reply"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/query_item_reply_example"
            android:textColor="@color/black"
            android:textSize="18sp" />

    </LinearLayout>
</androidx.cardview.widget.CardView>